# bloggler

api/: .env.example  .gitignore  __init__.py  app.py  pyproject.toml
api/config/: config.py
api/controllers/: __init__.py  blog_controller.py  controller.py
api/models/: blog.py
api/query/: __init__.py  engine.py  query_executor.py  tables.py
api/serializers/: blog_serializer.py  model_serializer.py
