[tool.poetry]
name = "bloggler"
version = "0.1.0"
description = ""
authors = ["Mariyan Momchilov <mmomchilov@asteasolutions.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.35"
python-dotenv = "^0.20.0"
fastapi = {extras = ["standart"], version = "^0.78.0"}
mypy = "^0.950"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
